Fixed vertical scroll on mobile by adding height: 100dvh

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   padding: 1rem;
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   background: var(--app-bg-color);
 
   &__side {
